--- a/app/views/shared/_purchased_on_deal.html.haml
+++ b/app/views/shared/_purchased_on_deal.html.haml
@@ -23,13 +23,13 @@
             = image_tag '/mercari-logo-gray.svg', alt: "" , class: 'lazyloaded'
               
 
-    %ul.mypage-history.pager
-      %li.pager-prev.pager-cell 
-        =link_to "#" do
-          %i.icon-arrow-left 
-      %li.pager-next.pager-cell 
-        =link_to "#" do
-          %i.icon-arrow-right
+    -# %ul.mypage-history.pager
+    -#   %li.pager-prev.pager-cell 
+    -#     =link_to "#" do
+    -#       %i.icon-arrow-left 
+    -#   %li.pager-next.pager-cell 
+    -#     =link_to "#" do
+    -#       %i.icon-arrow-right
 
--# =render 'shared/aside'
--# =render 'shared/footer' 
+=render 'shared/aside'
+=render 'shared/footer'
