--- a/app/views/shared/_purchased_on_deal.html.haml
+++ b/app/views/shared/_purchased_on_deal.html.haml
@@ -21,15 +21,13 @@
           %li.purchased_on_deal__content__container__tab-content__mypage-item-list__mypage-item-not-found
             取引中の商品がありません 
             = image_tag '/mercari-logo-gray.svg', alt: "" , class: 'lazyloaded'
-              
-
-    -# %ul.mypage-history.pager
-    -#   %li.pager-prev.pager-cell 
-    -#     =link_to "#" do
-    -#       %i.icon-arrow-left 
-    -#   %li.pager-next.pager-cell 
-    -#     =link_to "#" do
-    -#       %i.icon-arrow-right
+    %ul.mypage-history.pager
+      %li.pager-prev.pager-cell 
+        =link_to "#" do
+          %i.icon-arrow-left 
+      %li.pager-next.pager-cell 
+        =link_to "#" do
+          %i.icon-arrow-right
 
 =render 'shared/aside'
 =render 'shared/footer'
