--- a/app/views/shared/_purchased_html.haml
+++ b/app/views/shared/_purchased_html.haml
@@ -12,7 +12,7 @@
             =link_to "#", class:'purchased__content__container__mypage-tabs__active__h3' do
               取引中
         %li.purchased__content__container__list-tabs__right
-          %h3.put_up_goods_on_sale__content__container__list-tabs__right__text
+          %h3.purchased__content__container__list-tabs__right__text
             =link_to "#", class:'purchased__content__container__mypage-tabs__active__h3' do
               過去の取引
 
@@ -40,3 +40,35 @@
       %li.pager-next.pager-cell 
         =link_to "#" do
           %i.icon-arrow-right
+=render 'shared/main_page_header'
+
+%main.purchased_sale.clearfix
+  =render 'shared/profile-sidebar'
+  .purchased__content
+    %section.purchased__content__container
+      %h2.purchased__content__container__tab-head 
+        購入した商品
+      %ul.purchased__content__container__list-tabs
+        %li.purchased__content__container__list-tabs__list-center
+          %h3.purchased__content__container__list-tabs__list-center__block
+            =link_to "#", class: 'purchased__content__container__list-tabs__list-center__text' do
+              取引中
+      .purchased-lists
+        - (1..10).each do |i|
+          .purchased-lists__list
+            = image_tag '/goods_sample_3.jpg', size: "", alt: "buy-item-image" , class: 'purchased-lists__list__image'
+            .purchased-lists__list__text
+              新品サンプル
+              %i.fas.fa-chevron-right.purchased-lists__list__text__icon
+
+    -# ペイジャーは余力あったら作る
+    %ul.mypage-history.pager
+      %li.pager-prev.pager-cell 
+        =link_to "#" do
+          %i.icon-arrow-left 
+      %li.pager-next.pager-cell 
+        =link_to "#" do
+          %i.icon-arrow-right
+
+= render 'shared/aside'
+= render 'shared/footer'   
