--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,4 +26,5 @@
 @import 'purchase';
 @import 'top_pege_middle';
 @import 'user_evaluation_all';
-@import 'edit-prfile'
+@import 'edit-prfile';
+@import 'put_up_goods_on_sale';
