--- a/app/views/shared/_profile-sidebar.html.haml
+++ b/app/views/shared/_profile-sidebar.html.haml
@@ -22,7 +22,7 @@
           出品する
           %i.fas.fa-chevron-right
       %li
-        %a{href: '#', class: 'mypage-nav__list__item'} 
+        %a{href: tests_put_up_goods_on_sale_path, class: 'mypage-nav__list__item'} 
           出品した商品-出品中
           %i.fas.fa-chevron-right
       %li
