--- a/app/assets/stylesheets/_purchased_on_deal.scss
+++ b/app/assets/stylesheets/_purchased_on_deal.scss
@@ -2,17 +2,12 @@
   position:relative;
   height: 1292px;
   width: 1020px; 
-  margin: 40px auto 0;
-  margin-top: 40px;
-  margin-right: auto;
-  margin-bottom: 0px;
-  margin-left: auto;
-  padding: 40px;
+  margin: 40px auto 40px;
   display: block; 
   &__content {
     position: absolute;
-    top: 40px;
-    left: 360px;
+    top: 0px;
+    left: 320px;
     background-color: white;
     height: 382px;
     width: 720px; 
@@ -21,35 +16,31 @@
       height: 382px;
       width: 720px;
       &__tab-head {
+        font-weight: 600;
         height: 72px;
         width: 720px;
         padding-top: 20px;
         padding-bottom: 20px;
         padding-left: 15px; 
         box-sizing: border-box;            
-        h2 {
-          font-size: 16px;
-          font-weight: bold;
-          color: black;
-        }
       }
         &__list-tabs {
           height: 72px;
           width: 720px;
             
           &__left {
+            border-top: solid 2px red;
             height: 72px;
             width: 360px;
             padding: 20px 0; 
             display: inline-block;
-            float: left;
             box-sizing: border-box;
-            h3 {
+            &__text {
               font-size: 16px; 
               text-align: center;
               text-decoration-line: none;
               font-weight: bold;               
-              a{
+              .purchased_on_deal__content__container__mypage-tabs__active__h3{
                 text-decoration: none;
                 color: black;
               }
@@ -60,18 +51,15 @@
             height: 72px;
             width: 360px;
             padding: 20px 0; 
-            background-color: #eee;
-            display: inline-block;
+            background-color: #ccc;
             float: right;
             box-sizing: border-box;
-
-
-            h3 {
+            &__text {
               font-size: 16px; 
               text-align: center;
               color: black;
               font-weight: bold;
-              a {
+              .purchased_on_deal__content__container__mypage-tabs__active__h3{
                 text-decoration: none;
                 color: black;
               }
