--- a/app/views/shared/_profile-sidebar.html.haml
+++ b/app/views/shared/_profile-sidebar.html.haml
@@ -34,7 +34,7 @@
           出品した商品-売却済み
           %i.fas.fa-chevron-right
       %li
-        %a{href: '#', class: 'mypage-nav__list__item'}
+        %a{href: tests_purchased_on_deal_path , class: 'mypage-nav__list__item'}
           出品した商品-取引中
           %i.fas.fa-chevron-right
       %li
@@ -96,6 +96,6 @@
           電話番号の確認
           %i.fas.fa-chevron-right
       %li
-        %a{href: '#', class: 'mypage-nav__list__item'}
+        %a{href: tests_logout_path, class: 'mypage-nav__list__item'}
           ログアウト
           %i.fas.fa-chevron-right
