--- a/app/views/shared/_mypage_mypage.html.haml
+++ b/app/views/shared/_mypage_mypage.html.haml
@@ -1,12 +1,13 @@
 -# = render 'shared/main_page_header'
 
 %main.mypage-mypage.clearfix
-  -# =render 'shared/profile-sidebar'
+  =render 'shared/profile-sidebar'
   .mypage-mypage__content
     %section.mypage-mypage__content__container
       .mypage-mypage__content__container__user-head
         .mypage-mypage__content__container__user_head__image
         .mypage-mypage__content__container__user_head__nickname
+          AYA
         %ul.mypage-mypage__content__container__user_head__numbers
           %li.mypage-mypage__content__container__user_head__numbers__evaluation
           %li.mypage-mypage__content__container__user_head__numbers__put-up
