--- a/app/views/shared/_signup2.html.haml
+++ b/app/views/shared/_signup2.html.haml
@@ -2,7 +2,7 @@
 .login-header-wrapper
 
   -# ログインページ用ヘッダー
-  = render 'shared/login-header'
+  = render 'shared/login-header2'
 
   -# 電話番号の入力部分
   .main
