--- a/app/views/shared/_signup5.html.haml
+++ b/app/views/shared/_signup5.html.haml
@@ -1,5 +1,5 @@
 .login-header-wrapper
-  = render 'shared/login-header'
+  = render 'shared/login-header5'
   .signup5-contents
     .signup5-contents__head
       会員登録完了
