--- a/app/views/shared/_login-header1.html.haml
+++ b/app/views/shared/_login-header1.html.haml
@@ -4,10 +4,10 @@
       %a{href: "https://www.mercari.com/jp/"}
         %img{alt: "mercari", src: "//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?2482339763",
         width: 185, height: 49}
-
+    -# active_redは赤丸表示、afterはactiveより後（右側）の線を定義、beforeはactiveより前（左側）before_red after_redと定義すると赤色に変わるようにした。
     %nav.signup-bar
       %ol.clearfix
-        %li.active
+        %li.active_red
           会員情報
           .status
             .after
