--- a/app/views/shared/_exhibit.html.haml
+++ b/app/views/shared/_exhibit.html.haml
@@ -9,7 +9,8 @@
   .contents-box
     %section.contents-box__sell-container
       商品の情報を入力
-    = form_with(url: '#', class: 'contents-box__form-list') do |f|
+    -# = form_with(url: '#', class: 'contents-box__form-list') do |f|
+    = form_for @good, url: {action: "create"}, html: {class: 'contents-box__form-list'} do |f|
       -# 画像アップロード部分
       %section.contents-box__form-list__upload-box
         .contents-box__form-list__upload-box__image-text
@@ -21,10 +22,11 @@
       .contents-box__form-list__drop-box
         .contents-box__form-list__drop-box__item
           -# carrier wave導入で、imageをアップロードできるようにする必要あり。
-          = f.file_field :image, class: 'contents-box__form-list__drop-box__item__upload-file'
-          .contents-box__form-list__drop-box__item__text
-            ドラッグアンドドロップ
-            またはクリックしてファイルをアップロード
+          -# = f.file_field :images, class: 'contents-box__form-list__drop-box__item__upload-file', multiple: true
+          = f.fields_for :images, @good.images do |i|#:goods_picture, class:'contents-box__form-list__drop-box__item__upload-file' do |i|
+            -#.contents-box__form-list__drop-box__item__text
+            = i.file_field :goods_picture, type: 'file', class: 'contents-box__form-list__drop-box__item', style:'opacity: 0;'
+            10枚まで
       .contents-box__form-list__space
 
       -# 商品名、商品説明入力部分
@@ -34,14 +36,14 @@
             商品名
           .form-require
             必須
-        = f.text_field :name, class:'contents-box__descript-section__name-form',placeholder: '商品名(必須40文字まで)'
+        = f.text_field :goods_name, class:'contents-box__descript-section__name-form',　placeholder: '商品名(必須40文字まで)'
 
         .contents-box__descript-section__item-description
           .contents-box__descript-section__item-description__text
             商品の説明
           .form-require
             必須
-        = f.text_area :description, class:'contents-box__descript-section__descript-form',placeholder: '商品の説明(必須1,000文字以内)(色、素材、重さ、定価、注意点等)例)2010年頃に１万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。'
+        = f.text_area :goods_description, class:'contents-box__descript-section__descript-form',placeholder: '商品の説明(必須1,000文字以内)(色、素材、重さ、定価、注意点等)例)2010年頃に１万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。'
       -# .contents-box__descript-section__space
 
       -# 商品の詳細、カテゴリ選択部分
@@ -54,25 +56,25 @@
             カテゴリー
             .form-require
               必須
-            = f.select :m_category, @category_parent_array, {}, {class: "category", id: "parent_category"}
+            = f.select :category_id, @category_parent_array, {}, {class: "category", id: "parent_category"}
           -# サイズプルダウン
           .contents-box__category-section__category-box__tag
             サイズ
             .form-require
               必須
-            = f.select :category, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
+            = f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
           -# プルダウンにしてるけど、本当はインクリメンタルサーチ
           .contents-box__category-section__category-box__tag
             ブランド
             .form-any
               任意
-            = f.select :category, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
+            = f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
           -# 商品の状態プルダウン
           .contents-box__category-section__category-box__tag
             商品の状態
             .form-require
               必須
-            = f.select :category, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
+            = f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
 
       -# 配送の設定
       %section.contents-box__category-section#delivery
@@ -86,25 +88,25 @@
             配送料の負担
             .form-require
               必須
-            = f.select :category, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
+            = f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
         .contents-box__category-section__category-box
           .contents-box__category-section__category-box__tag
             配送の方法
             .form-require
               必須
-            = f.select :category, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
+            = f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
         .contents-box__category-section__category-box
           .contents-box__category-section__category-box__tag
             発送元の地域
             .form-require
               必須
-            = f.collection_select :prefecture_list, Prefecture.all, :id, :name,  {include_blank: '未選択'},{class: "category"}
+            = f.collection_select :prefecture_id, Prefecture.all, :id, :name,  {include_blank: '未選択'},{class: "category"}
         .contents-box__category-section__category-box
           .contents-box__category-section__category-box__tag
             発送までの日数
             .form-require
               必須
-            = f.select :category, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
+            = f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
       
       -# 販売価格、手数料の表示 
       %section.contents-box__category-section#fee
