--- a/app/views/tests/user_login.html.haml
+++ b/app/views/tests/user_login.html.haml
@@ -1,45 +1,1 @@
-.user-login-container
-  .user-login-contents
-    .user-login-header  
-      %a{href: "https://www.mercari.com/jp/"}
-        %img{alt: "mercari",width: 185,height: 95,src: "//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?2482339763"}/
-    .user-login-main
-      .login-page
-        .login-no-account
-          %p アカウントをお持ちでない方はこちら
-          %a{class: "new",href: "https://www.mercari.com/jp/signup/?after_save_callback=%2Fjp%2F"} 新規会員登録
-        .login-form-inner
-          = link_to'/user/auth/facebook', class: 'btn facebook' do
-            %i.fab.fa-facebook-square
-            Facebookでログイン
-          
-          = link_to'/user/auth/google', class: 'btn google' do
-            %img.fab.fa-google{src: "https://img.icons8.com/color/20/000000/google-logo.png"}
-            Googleでログイン
-        .user-login-form
-          .form-inner
-            .form-inner__mail
-              %input.user-login-input-text{name: "email",placeholder: "メールアドレス",type: "email",value: ""}
-            .form-inner__mail
-              %input.user-login-input-text{name: "password",placeholder: "パスワード",type: "password"}
-            .form-inner__lobot
-              .login-captcha
-                .user-login-form-group
-                  .g-recaptcha.login-captcha{"data-sitekey" => "6LfZGCYTAAAAAHoK-s7Lg5OdYg5Fq4susvALmZoc"}
-                %button.login-btn{type: "submit"} ログイン              
-                %a{href: "https://www.mercari.com/jp/password/reset/start/"} パスワードをお忘れの方
-
-    %footer.user-login-single-footer
-      %nav.clearfix.user-login-single-footer__text-list
-        %ul.clearfix.user-login-single-footer__text-list
-          %li.user-login-single-footer__text-list__text
-            %a{href: "https://www.mercari.com/jp/privacy/"} プライバシーポリシー
-          %li.user-login-single-footer__text-list__text
-            %a{href: "https://www.mercari.com/jp/tos/"} メルカリ利用規約
-          %li.user-login-single-footer__text-list__text
-            %a{href: "https://www.mercari.com/jp/tokutei/"} 特定商取引に関する表記
-      %a.single-footer-logo{href: "https://www.mercari.com/jp/"}
-        %img{alt: "mercari",height: "65",src: "//www-mercari-jp.akamaized.net/assets/img/common/common/logo-gray.svg?2482339763",width: "80"}
-      %p
-        %small © 2019 Mercari
-
+= render 'shared/user_login'
