--- a/app/views/shared/_exhibit.html.haml
+++ b/app/views/shared/_exhibit.html.haml
@@ -26,7 +26,6 @@
           = f.fields_for :images, @good.images do |i|#:goods_picture, class:'contents-box__form-list__drop-box__item__upload-file' do |i|
             -#.contents-box__form-list__drop-box__item__text
             = i.file_field :goods_picture, type: 'file', class: 'contents-box__form-list__drop-box__item', style:'opacity: 0;'
-            10枚まで
       .contents-box__form-list__space
 
       -# 商品名、商品説明入力部分
@@ -62,19 +61,19 @@
             サイズ
             .form-require
               必須
-            = f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
+            -# = f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
           -# プルダウンにしてるけど、本当はインクリメンタルサーチ
           .contents-box__category-section__category-box__tag
             ブランド
             .form-any
               任意
-            = f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
+            = f.collection_select :brand_id, Brand.all, :id, :name, {include_blank: '未選択'}, {class: 'category'}
           -# 商品の状態プルダウン
           .contents-box__category-section__category-box__tag
             商品の状態
             .form-require
               必須
-            = f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
+            -#= f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
 
       -# 配送の設定
       %section.contents-box__category-section#delivery
@@ -88,13 +87,13 @@
             配送料の負担
             .form-require
               必須
-            = f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
+            -#= f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
         .contents-box__category-section__category-box
           .contents-box__category-section__category-box__tag
             配送の方法
             .form-require
               必須
-            = f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
+            -#= f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
         .contents-box__category-section__category-box
           .contents-box__category-section__category-box__tag
             発送元の地域
@@ -106,7 +105,7 @@
             発送までの日数
             .form-require
               必須
-            = f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
+            -#= f.select :brand_id, [["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"],["表示する文字", "データベースに登録する値"]]
       
       -# 販売価格、手数料の表示 
       %section.contents-box__category-section#fee
